# android-minimal-rta-client

./: CMakeLists.txt  README.md  mcs.proto
include/minimal_invite_rta/: MinimalInviteRtaClient.h  minimal_invite_rta_c.h
src/: MinimalInviteRtaClient.cpp
